Refactor security-related components