@@ -2,6 +2,7 @@ package com.reviewping.coflo.global.config;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.reviewping.coflo.domain.badge.service.BadgeEventService;
+import com.reviewping.coflo.domain.user.entity.User;
 import com.reviewping.coflo.domain.user.service.LoginHistoryService;
 import com.reviewping.coflo.domain.user.service.UserService;
 import com.reviewping.coflo.domain.userproject.repository.UserProjectRepository;
@@ -9,18 +10,23 @@ import com.reviewping.coflo.global.auth.jwt.filter.JwtExceptionFilter;
 import com.reviewping.coflo.global.auth.jwt.filter.JwtVerifyFilter;
 import com.reviewping.coflo.global.auth.jwt.handler.JwtAccessDeniedHandler;
 import com.reviewping.coflo.global.auth.jwt.handler.JwtAuthenticationEntryPoint;
+import com.reviewping.coflo.global.auth.jwt.utils.JwtProvider;
 import com.reviewping.coflo.global.auth.oauth.handler.CommonLoginFailHandler;
 import com.reviewping.coflo.global.auth.oauth.handler.CommonLoginSuccessHandler;
+import com.reviewping.coflo.global.auth.oauth.model.UserDetails;
 import com.reviewping.coflo.global.auth.oauth.repository.HttpCookieOAuth2AuthorizationRequestRepository;
 import com.reviewping.coflo.global.auth.oauth.service.AuthenticationService;
 import com.reviewping.coflo.global.auth.oauth.service.OAuth2UserService;
+import com.reviewping.coflo.global.common.response.ApiResponse;
+import com.reviewping.coflo.global.common.response.impl.ApiSuccessResponse;
 import com.reviewping.coflo.global.util.CookieUtil;
 import com.reviewping.coflo.global.util.RedisUtil;
-import java.util.Arrays;
+import jakarta.servlet.http.HttpServletResponse;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -28,17 +34,19 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+@Profile("prod")
 @Configuration
 @RequiredArgsConstructor
-@EnableMethodSecurity
 public class SecurityConfig {
 
     private final RedisUtil redisUtil;
     private final CookieUtil cookieUtil;
+    private final JwtProvider jwtProvider;
     private final ObjectMapper objectMapper;
     private final OAuth2UserService oAuth2UserService;
     private final AuthenticationService authenticationService;
@@ -56,7 +64,13 @@ public class SecurityConfig {
     @Bean
     public CommonLoginSuccessHandler commonLoginSuccessHandler() {
         return new CommonLoginSuccessHandler(
-                redisUtil, cookieUtil, loginHistoryService, badgeEventService, userService, userProjectRepository);
+                redisUtil,
+                cookieUtil,
+                jwtProvider,
+                loginHistoryService,
+                badgeEventService,
+                userService,
+                userProjectRepository);
     }
 
     @Bean
@@ -66,9 +80,10 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        JwtVerifyFilter jwtVerifyFilter = new JwtVerifyFilter(redisUtil, cookieUtil, authenticationService);
+        JwtVerifyFilter jwtVerifyFilter =
+                new JwtVerifyFilter(redisUtil, cookieUtil, jwtProvider, authenticationService);
 
-        http.exceptionHandling((exceptions) -> exceptions
+        http.exceptionHandling(exceptions -> exceptions
                 .authenticationEntryPoint(new JwtAuthenticationEntryPoint()) // 인증 실패 핸들링
                 .accessDeniedHandler(new JwtAccessDeniedHandler())); // 인가 실패 핸들링
 
@@ -88,12 +103,9 @@ public class SecurityConfig {
                 );
 
         http.csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(httpSecuritySessionManagementConfigurer -> {
-                    httpSecuritySessionManagementConfigurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-                })
-                .cors(cors -> {
-                    cors.configurationSource(corsConfigurationSource());
-                })
+                .sessionManagement(httpSecuritySessionManagementConfigurer ->
+                        httpSecuritySessionManagementConfigurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .addFilterBefore(jwtVerifyFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(new JwtExceptionFilter(objectMapper), jwtVerifyFilter.getClass())
                 .formLogin(AbstractHttpConfigurer::disable);
@@ -107,18 +119,31 @@ public class SecurityConfig {
                 .failureHandler(commonLoginFailHandler())
                 .userInfoEndpoint(userInfoEndpointConfig -> userInfoEndpointConfig.userService(oAuth2UserService)));
 
+        http.logout(httpSecurityLogoutConfigurer -> httpSecurityLogoutConfigurer
+                .logoutRequestMatcher(new AntPathRequestMatcher("/api/users/logout", "POST"))
+                .logoutSuccessHandler((request, response, authentication) -> {
+                    response.setContentType("application/json");
+                    response.setStatus(HttpServletResponse.SC_OK);
+                    ApiResponse<Object> successResponse = ApiSuccessResponse.success();
+                    objectMapper.writeValue(response.getWriter(), successResponse);
+                    UserDetails userDetails = (UserDetails) authentication.getPrincipal();
+                    User user = userDetails.getUser();
+                    redisUtil.delete(String.valueOf(user.getId()));
+                })
+                .deleteCookies(jwtProvider.accessName, jwtProvider.refreshName));
+
         return http.build();
     }
 
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
+        configuration.setAllowedOrigins(List.of(
                 "http://localhost:5173",
                 "https://localhost:5173",
                 "http://www.coflo.co.kr",
                 "https://www.coflo.co.kr"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
